# V2I-Traffic-Light-Demonstrator

./: README.md
Android_App/: local.properties  settings.gradle
Android_App/Traffic_Light/: Traffic_Light-debug.apk  build.gradle  proguard-rules.pro
Android_App/Traffic_Light/src/main/: AndroidManifest.xml
Android_App/Traffic_Light/src/main/java/hauptseminar/hm/edu/trafficlight/app/activity/: MainActivity.java  PedestrianTab.java  PriorityTab.java  SettingsTab.java  StatusCarTab.java  StatusPedestrianTab.java
Android_App/Traffic_Light/src/main/java/hauptseminar/hm/edu/trafficlight/app/model/: AppData.java
Android_App/Traffic_Light/src/main/res/drawable/: emergency_btn.xml  pedestrian_green_btn.xml  pedestrian_green_long_btn.xml
Android_App/Traffic_Light/src/main/res/layout/: priority_tab_view.xml  settings_tab_view.xml  status_pedestrian_tab_view.xml
Android_App/Traffic_Light/src/main/res/values/: strings.xml
Raspberry_App/Meta/: cascade.xml  example.json
Raspberry_App/Meta/uml/: .TrafficLight  TrafficLight.qm
Raspberry_App/TrafficLight/: CMakeLists.txt  Detection.cpp  Detection.h  Events.h  Main.cpp  PedestriansEnabled.cpp  PedestriansEnabled.h  Pin.cpp  Pin.h  RestServer.cpp  RestServer.h  Settings.h  TrafficLightController.cpp  TrafficLightController.h  VehiclesEnabled.cpp  VehiclesEnabled.h
Raspberry_App/toolchain-build/: cross-compile-libs.sh  mount-raspbian.sh  rpi-toolchain.cmake
Raspberry_App/traincascade/: cascade_classifier_howto  create_vector.sh
Thesis_Presentation/: Presentation.pptx
(+8 files in other folders)
